# idle-cli-adventure

./: Cargo.toml
data/: steven.json
src/: adventurer.rs  io_handler.rs  main.rs  stat.rs
